--- a/iCare/app/src/main/res/values/colors.xml
+++ b/iCare/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="gray">#999999</color>
     <color name="colorTopbar">#a90003</color>
     <color name="bar_color">#f6f6f6</color>
+    <color name="green">#03ab3b</color>
 
 </resources>
