--- a/iCare/app/src/main/res/values/styles.xml
+++ b/iCare/app/src/main/res/values/styles.xml
@@ -5,4 +5,8 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="dialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowBackground">@color/transparent</item><!--背景透明-->
+    </style>
+
 </resources>
