--- a/iCare/app/src/main/res/layout/fragment_service.xml
+++ b/iCare/app/src/main/res/layout/fragment_service.xml
@@ -46,116 +46,172 @@
         <ImageButton
             android:id="@+id/btnRight"
             android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_height="30dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@null"
-            android:gravity="right"
-            android:src="@mipmap/icon_add"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
+            android:padding="5dp"
+            android:scaleType="fitCenter"
+            android:src="@mipmap/icon_more_white" />
 
-        <ImageButton
-            android:id="@+id/btnSwitch"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@+id/btnRight"
-            android:background="@null"
-            android:gravity="right"
-            android:src="@mipmap/icon_switch_character"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/linear_tap"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:orientation="horizontal">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/btn_All"
+            <LinearLayout
+                android:id="@+id/linear_tap"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/str_all"
-                android:textColor="@color/material_grey_850"
-                android:textSize="15sp" />
+                android:layout_height="46dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/btn_All"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/str_all"
+                    android:textColor="@color/material_grey_850"
+                    android:textSize="15sp" />
+
+                <ImageView
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="7dp"
+                    android:layout_marginTop="7dp"
+                    android:background="@color/material_grey_300" />
+
+                <TextView
+                    android:id="@+id/btn_Service_Type"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/service_type"
+                    android:textColor="@color/material_grey_850"
+                    android:textSize="15sp" />
+
+                <ImageView
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="7dp"
+                    android:layout_marginTop="7dp"
+                    android:background="@color/material_grey_300" />
+
+                <TextView
+                    android:id="@+id/btn_Sort"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/sort"
+                    android:textColor="@color/material_grey_850"
+                    android:textSize="15sp" />
+
+            </LinearLayout>
 
             <ImageView
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="7dp"
-                android:layout_marginTop="7dp"
+                android:id="@+id/img_line"
+                android:layout_width="match_parent"
+                android:layout_height="15dp"
+                android:layout_below="@+id/linear_tap"
                 android:background="@color/material_grey_300" />
 
-            <TextView
-                android:id="@+id/btn_Service_Type"
+            <ListView
+                android:id="@+id/lv_Data"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/service_type"
-                android:textColor="@color/material_grey_850"
-                android:textSize="15sp" />
+                android:layout_below="@+id/img_line"
+                android:background="#99FFFFFF"
+                android:divider="@null"
+                android:scrollingCache="false"
+                android:visibility="visible" />
 
-            <ImageView
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="7dp"
-                android:layout_marginTop="7dp"
-                android:background="@color/material_grey_300" />
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true" />
 
-            <TextView
-                android:id="@+id/btn_Sort"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/sort"
-                android:textColor="@color/material_grey_850"
-                android:textSize="15sp" />
+        </RelativeLayout>
 
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/img_line"
-            android:layout_width="match_parent"
-            android:layout_height="15dp"
-            android:layout_below="@+id/linear_tap"
-            android:background="@color/material_grey_300" />
-
-        <ListView
-            android:id="@+id/lv_Data"
+        <RelativeLayout
+            android:id="@+id/relative_More"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/img_line"
-            android:background="#99FFFFFF"
-            android:divider="@null"
-            android:scrollingCache="false"
-            android:visibility="visible" />
+            android:visibility="gone">
 
-        <com.baidu.mapapi.map.MapView
-            android:id="@+id/bmapView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/img_line"
-            android:clickable="true"
-            android:visibility="gone" />
+            <LinearLayout
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
+                android:background="#f95151"
+                android:orientation="vertical">
 
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
+                <LinearLayout
+                    android:id="@+id/btnAddOrder"
+                    android:layout_width="match_parent"
+                    android:layout_height="46dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
 
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center_vertical"
+                        android:padding="5dp"
+                        android:scaleType="center"
+                        android:src="@mipmap/icon_add" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="5dp"
+                        android:text="@string/add_order"
+                        android:textColor="@color/white"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/btnSwitch"
+                    android:layout_width="match_parent"
+                    android:layout_height="46dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center_vertical"
+                        android:padding="5dp"
+                        android:scaleType="center"
+                        android:src="@mipmap/icon_switch_character" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="5dp"
+                        android:text="@string/change_to_server"
+                        android:textColor="@color/white"
+                        android:textSize="16sp" />
+                </LinearLayout>
+            </LinearLayout>
+        </RelativeLayout>
     </RelativeLayout>
 
 </LinearLayout>
