--- a/iCare/app/src/main/res/layout/my_family_detail.xml
+++ b/iCare/app/src/main/res/layout/my_family_detail.xml
@@ -201,14 +201,13 @@
                     android:layout_marginTop="10dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp">
+                    android:layout_marginLeft="10dp">
 
                     <ImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_gravity="center_vertical"
-                        android:padding="5dp"
+                        android:padding="8dp"
                         android:scaleType="fitCenter"
                         android:src="@mipmap/icon_delete_white" />
 
@@ -216,7 +215,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="5dp"
                         android:text="@string/delete"
                         android:textColor="@color/white"
                         android:textSize="16sp" />
@@ -228,22 +227,23 @@
                     android:layout_marginBottom="5dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp">
+                    android:layout_marginLeft="10dp">
 
-                    <ImageView
+                    <com.sundy.icare.customs.CircleImageView
                         android:id="@+id/imgHeader"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_gravity="center_vertical"
                         android:padding="5dp"
-                        android:scaleType="fitCenter" />
+                        android:background="@null"
+                        android:src="@mipmap/profile_img"
+                        app:border_color="#00000000" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="5dp"
                         android:text="@string/add_to_destop"
                         android:textColor="@color/white"
                         android:textSize="16sp" />
