--- a/iCare/app/src/main/res/layout/register_mobile.xml
+++ b/iCare/app/src/main/res/layout/register_mobile.xml
@@ -42,32 +42,32 @@
                 android:textSize="14sp" />
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp">
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
                 <EditText
                     android:id="@+id/edtCode"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/edt_height"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="2"
                     android:background="@drawable/corner_edt"
                     android:gravity="center"
-                    android:textSize="14sp"
-                    android:layout_weight="2"
-                    android:layout_marginRight="5dp" />
+                    android:textSize="14sp" />
 
                 <Button
+                    android:id="@+id/btnGetCode"
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
-                    android:text="@string/mobile_validation_code"
-                    android:id="@+id/btnGetCode"
                     android:layout_weight="3"
-                    android:background="@drawable/corner_btn_gray"
-                    android:textSize="12sp"
-                    android:textColor="@color/white" />
+                    android:background="@drawable/corner_btn_green"
+                    android:text="@string/get_verify_code"
+                    android:textColor="@color/white"
+                    android:textSize="12sp" />
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
