--- a/iCare/app/src/main/res/layout/user_detail.xml
+++ b/iCare/app/src/main/res/layout/user_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
@@ -43,7 +44,7 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <com.sundy.icare.customs.CircleImageView
+                    <com.facebook.drawee.view.DraweeView
                         android:id="@+id/imgMe"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
