修改Login模块及注册模块

--- a/iCare/app/src/main/res/layout/login.xml
+++ b/iCare/app/src/main/res/layout/login.xml
@@ -6,13 +6,13 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="vertical"
+        android:id="@+id/linear_icon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_marginBottom="30dp"
-        android:id="@+id/linear_icon"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="40dp"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ImageView
             android:layout_width="80dp"
@@ -25,11 +25,11 @@
         android:id="@+id/linear_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/linear_icon"
         android:layout_centerInParent="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:orientation="vertical"
-        android:layout_below="@+id/linear_icon">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -60,6 +60,7 @@
                     android:layout_toRightOf="@+id/img_password"
                     android:background="@null"
                     android:hint="@string/loginName"
+                    android:inputType="text"
                     android:singleLine="true"
                     android:textSize="14sp" />
             </RelativeLayout>
@@ -129,10 +130,10 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="60dp"
+                android:background="@drawable/corner_bg_gray_light"
                 android:text="@string/login"
                 android:textColor="@android:color/white"
-                android:textSize="14sp"
-                android:background="@drawable/corner_bg_gray_light" />
+                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -148,8 +149,8 @@
         android:layout_marginBottom="16dp"
         android:gravity="bottom"
         android:text="@string/i_dont_have_account"
-        android:textSize="16sp"
-        android:textColor="@color/material_grey_850" />
+        android:textColor="@color/material_grey_850"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/txt_first_visit"
