--- a/iCare/app/src/main/res/values/colors.xml
+++ b/iCare/app/src/main/res/values/colors.xml
@@ -44,7 +44,7 @@
     <color name="grid_state_pressed">#1Affffff</color>
     <color name="grid_state_focused">#80000000</color>
     <color name="voip_interface_text_color">#bababa</color>
-    <color name="black_deep">#FF000000</color>
+    <color name="black_deep">#000000</color>
     <color name="btn_answer_pressed">#4ebcd3</color>
     <color name="btn_answer_normal">#2dafa3</color>
     <color name="list_itease_secondary_color">#888888</color>
