--- a/iCare/app/src/main/res/layout/activity_login.xml
+++ b/iCare/app/src/main/res/layout/activity_login.xml
@@ -18,6 +18,11 @@
             android:layout_height="100dp"
             android:src="@mipmap/ic_launcher" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="孝为先" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -52,7 +57,7 @@
                 <EditText
                     android:id="@+id/edt_username"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="12dp"
                     android:layout_marginRight="8dp"
@@ -61,7 +66,8 @@
                     android:hint="@string/loginName"
                     android:inputType="text"
                     android:singleLine="true"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:gravity="center_vertical" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -82,7 +88,7 @@
                 <EditText
                     android:id="@+id/edt_password"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="12dp"
                     android:layout_marginRight="8dp"
@@ -92,7 +98,8 @@
                     android:password="true"
                     android:singleLine="true"
                     android:textIsSelectable="false"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:gravity="center_vertical" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -129,7 +136,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="60dp"
-                android:background="@drawable/corner_bg_gray_light"
+                android:background="@drawable/corner_btn_gray"
                 android:text="@string/login"
                 android:textColor="@android:color/white"
                 android:textSize="14sp" />
@@ -157,6 +164,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="38dp"
         android:text="@string/my_first_visit" />
 </RelativeLayout>
