--- a/iCare/app/src/main/res/layout/activity_forget_password_mobile.xml
+++ b/iCare/app/src/main/res/layout/activity_forget_password_mobile.xml
@@ -22,14 +22,6 @@
             android:layout_marginTop="60dp"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/your_mobile"
-                android:textColor="@color/material_grey_850"
-                android:textSize="16sp" />
-
             <EditText
                 android:id="@+id/edtMobile"
                 android:layout_width="match_parent"
@@ -39,14 +31,15 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/corner_edt"
                 android:gravity="center"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:hint="您的手机号码" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:orientation="horizontal">
 
                 <EditText
