修改注册页面

--- a/iCare/app/src/main/res/layout/activity_register_set_password.xml
+++ b/iCare/app/src/main/res/layout/activity_register_set_password.xml
@@ -22,14 +22,6 @@
             android:layout_marginTop="60dp"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/set_your_password"
-                android:textColor="@color/material_grey_850"
-                android:textSize="16sp" />
-
             <EditText
                 android:id="@+id/edtPassword"
                 android:layout_width="match_parent"
@@ -39,6 +31,20 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/corner_edt"
                 android:gravity="center"
+                android:hint="@string/set_your_password"
+                android:inputType="textPassword"
+                android:textSize="14sp" />
+
+            <EditText
+                android:id="@+id/edtConfirmPassword"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/edt_height"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/corner_edt"
+                android:gravity="center"
+                android:hint="@string/confirmpassword"
                 android:inputType="textPassword"
                 android:textSize="14sp" />
 
