--- a/iCare/app/src/main/res/layout/item_my_order_list_view.xml
+++ b/iCare/app/src/main/res/layout/item_my_order_list_view.xml
@@ -10,25 +10,24 @@
         android:layout_height="wrap_content"
         android:padding="5dp">
 
-        <com.sundy.icare.ui.CircleImageView
+        <com.facebook.drawee.view.DraweeView
             android:id="@+id/img"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerVertical="true"
             android:layout_margin="10dp"
             android:background="@null"
-            android:src="@mipmap/profile_img"
-            app:border_color="#00000000" />
+            android:src="@mipmap/profile_img" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_toLeftOf="@+id/txtStatus"
             android:layout_toRightOf="@+id/img"
-            android:orientation="vertical"
-            android:layout_centerVertical="true">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txtName"
@@ -67,11 +66,11 @@
             android:layout_alignParentBottom="false"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/txtStatus"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
             android:text="45.0元"
             android:textColor="@color/orange"
-            android:textSize="18sp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp" />
+            android:textSize="18sp" />
 
     </RelativeLayout>
 
