--- a/iCare/app/src/main/res/layout/activity_bind_family.xml
+++ b/iCare/app/src/main/res/layout/activity_bind_family.xml
@@ -34,13 +34,13 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <com.sundy.icare.ui.CircleImageView
+                    <com.facebook.drawee.view.DraweeView
                         android:id="@+id/imgMe"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:layout_width="78dp"
+                        android:layout_height="78dp"
                         android:layout_centerInParent="true"
-                        android:src="@mipmap/profile_img"
-                        app:border_color="#00000000" />
+                        android:layout_gravity="center_horizontal"
+                        android:src="@mipmap/profile_img" />
 
                     <ImageView
                         android:layout_width="30dp"
