--- a/iCare/app/src/main/res/layout/item_my_family_gridview.xml
+++ b/iCare/app/src/main/res/layout/item_my_family_gridview.xml
@@ -6,10 +6,10 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:orientation="vertical"
         android:padding="5dp">
 
         <RelativeLayout
@@ -18,38 +18,37 @@
             android:layout_centerInParent="true"
             android:orientation="vertical">
 
-            <com.sundy.icare.ui.CircleImageView
+            <com.facebook.drawee.view.DraweeView
                 android:id="@+id/img"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:layout_margin="10dp"
                 android:background="@null"
-                android:src="@mipmap/profile_img"
-                app:border_color="#00000000"
-                android:layout_margin="10dp" />
+                android:src="@mipmap/profile_img" />
 
             <ImageView
+                android:id="@+id/imgStatus"
                 android:layout_width="18dp"
                 android:layout_height="18dp"
                 android:layout_alignParentBottom="false"
                 android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
                 android:scaleType="fitCenter"
                 android:src="@mipmap/icon_green_right"
                 android:text="Sundy Xu"
                 android:textColor="@color/material_grey_850"
-                android:textSize="14sp"
-                android:layout_alignParentTop="true"
-                android:id="@+id/imgStatus" />
+                android:textSize="14sp" />
         </RelativeLayout>
 
         <TextView
+            android:id="@+id/txtName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="爸爸（陈大文）"
-            android:id="@+id/txtName"
-            android:textColor="@color/material_blue_grey_900"
-            android:textSize="12sp"
             android:gravity="center"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:text="爸爸（陈大文）"
+            android:textColor="@color/material_blue_grey_900"
+            android:textSize="12sp" />
     </LinearLayout>
 
 </LinearLayout>
