--- a/iCare/app/src/main/res/layout/item_my_family_listview.xml
+++ b/iCare/app/src/main/res/layout/item_my_family_listview.xml
@@ -9,14 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.sundy.icare.ui.CircleImageView
+        <com.facebook.drawee.view.DraweeView
             android:id="@+id/img"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="10dp"
             android:background="@null"
-            android:src="@mipmap/profile_img"
-            app:border_color="#00000000" />
+            android:src="@mipmap/profile_img" />
 
         <TextView
             android:id="@+id/txtName"
