--- a/iCare/app/src/main/res/layout/my_family_detail.xml
+++ b/iCare/app/src/main/res/layout/my_family_detail.xml
@@ -62,14 +62,13 @@
                         android:layout_height="wrap_content"
                         android:padding="6dp">
 
-                        <com.sundy.icare.ui.CircleImageView
+                        <com.facebook.drawee.view.DraweeView
                             android:id="@+id/img"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:layout_margin="10dp"
                             android:background="@null"
-                            android:src="@mipmap/profile_img"
-                            app:border_color="#00000000" />
+                            android:src="@mipmap/profile_img" />
 
                         <TextView
                             android:id="@+id/txtName"
@@ -198,10 +197,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="46dp"
                     android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:layout_marginLeft="10dp">
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="40dp"
@@ -225,19 +224,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="46dp"
                     android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="10dp"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:layout_marginLeft="10dp">
+                    android:orientation="horizontal">
 
-                    <com.sundy.icare.ui.CircleImageView
+                    <com.facebook.drawee.view.DraweeView
                         android:id="@+id/imgHeader"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_gravity="center_vertical"
-                        android:padding="5dp"
                         android:background="@null"
-                        android:src="@mipmap/profile_img"
-                        app:border_color="#00000000" />
+                        android:padding="5dp"
+                        android:src="@mipmap/profile_img" />
 
                     <TextView
                         android:layout_width="wrap_content"
