--- a/iCare/app/src/main/res/layout/server_me.xml
+++ b/iCare/app/src/main/res/layout/server_me.xml
@@ -62,13 +62,12 @@
                         android:gravity="center"
                         android:orientation="vertical">
 
-                        <com.sundy.icare.ui.CircleImageView
+                        <com.facebook.drawee.view.DraweeView
                             android:id="@+id/imgMe"
                             android:layout_width="60dp"
                             android:layout_height="60dp"
                             android:layout_centerInParent="true"
-                            android:src="@mipmap/profile_img"
-                            app:border_color="#00000000" />
+                            android:src="@mipmap/profile_img" />
 
                         <TextView
                             android:id="@+id/txtName"
