--- a/iCare/app/src/main/res/layout/activity_settings.xml
+++ b/iCare/app/src/main/res/layout/activity_settings.xml
@@ -236,6 +236,34 @@
                     android:layout_height="1dp"
                     android:background="@color/material_grey_100" />
 
+                <RelativeLayout
+                    android:id="@+id/rel_about_us"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/settings_item_height"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="@string/about_us"
+                        android:textColor="@color/material_grey_850" />
+
+                    <ImageView
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:background="@null"
+                        android:src="@mipmap/icon_right" />
+                </RelativeLayout>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/material_grey_100" />
+
             </LinearLayout>
         </ScrollView>
 
